chore: Codeql manual building. Fixing sudo

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           echo "Installing dependencies"
-          apt -y install nlohmann-json3-dev lcov libgtest-dev
+          sudo apt -y install nlohmann-json3-dev lcov libgtest-dev
       
       - name: Build
         run: |
