chore: Fix make test in codeql

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Testing
         run: |
           echo "Making test"
-          make Test
+          make test
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
