chore: Fix make test codeql

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -60,6 +60,7 @@ jobs:
       - name: Testing
         run: |
           echo "Making test"
+          cd build
           make test
 
       - name: Perform CodeQL Analysis
