--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -56,7 +56,7 @@ jobs:
           mkdir -p build
           cd build
           cmake .. -DENABLE_COVERAGE=ON
-          make VERBOSE=1 --color=always
+          make VERBOSE=1
         shell: bash
 
       - name: Testing
