--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -74,10 +74,10 @@ jobs:
 
       - name: Generating artifacts
         run: |
-          mkdir -p ${{github.workspace}}/artifacts
-          cp -r build/coverage ${{github.workspace}}/artifacts/
-          cp -r build/bin ${{github.workspace}}/artifacts/
-          cp -r build/Testing ${{github.workspace}}/artifacts/
+          mkdir -p ${{github.workspace}}/artifacts/build
+          cp -r build/coverage ${{github.workspace}}/artifacts/build/
+          cp -r build/bin ${{github.workspace}}/artifacts/build/
+          cp -r build/Testing ${{github.workspace}}/artifacts/build/
         shell: bash
 
       - name: Upload build artifacts
